# clb

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile.in  LICENSE  README.md  config.h.in
app_clb/: CMakeLists.txt  main.cc  winres.rc
cmake/: specific_unix.cmake  specific_win.cmake
lib_clb/: CMakeLists.txt  application.qrc  clb.h  lib_clb.cc  lib_clb.h
lib_clb/gui/: CMakeLists.txt  about.cc  about.h  about.ui  gui_main.cc  gui_main.h  snippetsdlg.cc  snippetsdlg.h  snippetsdlg.ui
lib_clb/gui/editors/: codeeditor.cc  codeeditor.h
lib_clb/logic/: CMakeLists.txt  snipdyn.h  snipitem.cc  snipmodel.cc  snipmodel.h
lib_clb/support/: CMakeLists.txt
tests/: testhelpers.h
