# ----------------------------------------------------------------------------
# Project library.
# ============================================================================

# ----------------------------------------------------------------------------
# initialize
pileTarget( "LapCLB")

# ============================================================================

# ----------------------------------------------------------------------------
# Subcomponents

add_subdirectory("support")
add_subdirectory("logic")

# ============================================================================


# ----------------------------------------------------------------------------
# our library
set( LAPCLB_SOURCES
	lib_clb.cc
)

set( LAPCLB_HEADERS
	lib_clb.h
)

set( LAPCLB_LIBS
	"support"
	"logic"
)

# ============================================================================

# ----------------------------------------------------------------------------
# terminate
pileEndTarget( "LapCLB" "shared")

	
# ============================================================================
