# ----------------------------------------------------------------------------
# Project library.
# ============================================================================

# ----------------------------------------------------------------------------
# initialize
pileTarget( "LapCLB")

# ============================================================================

# ----------------------------------------------------------------------------
# Subcomponents
add_definitions (-DCLB_SHARED -DUSERMSG_SHARED -DREFCNT_SHARED)

add_subdirectory("support")
add_subdirectory("logic")
add_subdirectory("gui")

# ============================================================================


# ----------------------------------------------------------------------------
# our library
set( LAPCLB_SOURCES
	lib_clb.cc
)

set( LAPCLB_HEADERS
	lib_clb.h
    clb.h
)

set( LAPCLB_RES
    application.qrc
)

set( LAPCLB_LIBS
    "clbgui"
    "logic"
    "support"
)

set( LAPCLB_QT_MODS
    Core
    Xml
    Network
)

# ============================================================================

# ----------------------------------------------------------------------------
# terminate
pileEndTarget( "LapCLB" "shared" COPY)

# ============================================================================
